data/derived/comb/progs/unify/prog5357.ml.out
Characters 72-84:
  (10*o, bigAdd(mulByDigit o*x l1) l)
                ^^^^^^^^^^^^
Error: This expression has type int list -> int list
       but an expression was expected of type int
